(library
 (name if_bridge_filter)
 (modules if_bridge_filter tc_loader)
 (libraries libbpf ctypes ctypes.foreign unix ipaddr))

(rule
 (mode
  (promote (until-clean)))
 (targets modbus_filter.bpf.o)
 (deps vmlinux.h modbus_filter.bpf.c modbus_filter.h)
 (action
  (bash
   "arch=$(uname -m | sed 's/x86_64/x86/' | sed 's/arm.*/arm/' | sed 's/aarch64/arm64/' | sed 's/ppc64le/powerpc/' | sed 's/mips.*/mips/' | sed 's/riscv64/riscv/' | sed 's/loongarch64/loongarch/'); ${CLANG_BPF:-clang-19} -g -O2 -target bpf -D__TARGET_ARCH_${arch} $(pkg-config --cflags libbpf) -c modbus_filter.bpf.c -o modbus_filter.bpf.o")))

(rule
 (mode
  (promote (until-clean)))
 (targets vmlinux.h)
 (action
  (bash
   "set -eu; btf_file=${VMLINUX_BTF:-}; if [ -n \"$btf_file\" ] && [ -r \"$btf_file\" ]; then bpftool btf dump file \"$btf_file\" format c > vmlinux.h; exit 0; fi; if [ -r /sys/kernel/btf/vmlinux ]; then bpftool btf dump file /sys/kernel/btf/vmlinux format c > vmlinux.h; exit 0; fi; if [ -r /boot/vmlinux-$(uname -r) ]; then bpftool btf dump file /boot/vmlinux-$(uname -r) format c > vmlinux.h; exit 0; fi; echo 'Error: could not find kernel BTF.' >&2; echo 'Tried: VMLINUX_BTF, /sys/kernel/btf/vmlinux, /boot/vmlinux-$(uname -r)' >&2; echo 'Provide one with: VMLINUX_BTF=/path/to/vmlinux.btf dune build' >&2; exit 1")))
